# service/api/unban-user.go
@@ -6,9 +6,9 @@ import (
 	"github.com/julienschmidt/httprouter"
 )
 
-func (rt *_router) uploadPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
-
+func (rt *_router) unBanUser(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	var message string
+	targetUser := new(User)
 	user := new(User)
 
 	id := ps.ByName("userID")
@@ -21,7 +21,8 @@ func (rt *_router) uploadPhoto(w http.ResponseWriter, r *http.Request, ps httpro
 		}
 		return
 	}
-	err = r.ParseForm()
+	targetUser.Username = r.FormValue("username")
+	targetUser, err = checkUsername(targetUser.Username)
 	if err != nil {
 		message = "The server cannot or will not process the request due to an apparent client error"
 		err := encodeResponse(w, message, http.StatusBadRequest)
@@ -30,10 +31,16 @@ func (rt *_router) uploadPhoto(w http.ResponseWriter, r *http.Request, ps httpro
 		}
 		return
 	}
-	pic := uploadPhotoParams(user.Id)
-
-	Profiles[user.Id].Post[pic.PhotoID] = pic
-	message = "photo uploaded succesfully"
+	if err = Profiles[user.Id].checkBanList(targetUser); err == nil {
+		message = "The server cannot or will not process the request due to an apparent client error"
+		err := encodeResponse(w, message, http.StatusBadRequest)
+		if err != nil {
+			panic(err)
+		}
+		return
+	}
+	delete(Profiles[user.Id].Banned, targetUser.Id)
+	message = "Success"
 	err = encodeResponse(w, message, http.StatusOK)
 	if err != nil {
 		panic(err)
